---------------------------------------------------------------------------------------------------
Version: 1.11.12
Date: 2021.09.28
  Changes:
    - Supports Clock
    - Supports Delete Adjacent Chunk
    - Made EvoGUI display on the right of the main buttons
---------------------------------------------------------------------------------------------------
Version: 1.11.11
Date: 2021.09.27
  Changes:
    - Fixed a crash with Hive Mind
---------------------------------------------------------------------------------------------------
Version: 1.11.10
Date: 2021.09.27
  Changes:
    - Fixed a crash with changing surface (e.g. Factorissimo)
---------------------------------------------------------------------------------------------------
Version: 1.11.9
Date: 2021.09.26
  Changes:
    - Fixed a crash
---------------------------------------------------------------------------------------------------
Version: 1.11.8
Date: 2021.09.26
  Changes:
    - Fixed a crash with new games
    - Buttons of: Module Inserter, Factory Planner, Rich Text Helper, Not Enough Todo and Train Log are now underlined when their window is open
---------------------------------------------------------------------------------------------------
Version: 1.11.7
Date: 2021.09.26
  Changes:
    - Fixed crash
---------------------------------------------------------------------------------------------------
Version: 1.11.6
Date: 2021.09.26
  Changes:
    - Code cleaned and improved (uses less resources)
    - Supports LandfillEverythingAndPumps
    - Supports Automatic Belt Direction
    - Buttons of Pyanodon, Solar Ratio and Cities of Earth now close their main window
---------------------------------------------------------------------------------------------------
Version: 1.11.5
Date: 2021.09.20
  Changes:
    - Supports base scenarios (PVP, Supply Challenge, Team Production...)
    - Supports Cities Of Earth
    - Supports Oarc Multiplayer Spawn
    - Supports Decu