@@ -17,7 +17,7 @@ local sprites = {
 "spawncontrol_random_button", "teamcoop_button1", "teamcoop_button2", "teleportation_button", "thefatcontroller_button", "todolist_button", "trainlog_button", "trainpubsub_button",
 "trashcan_button", "upgradeplannernext_button", "usagedetector_button", "whatsmissing_button", "wiiuf_button", "yarm_all_button", "yarm_none_button", "yarm_warnings_button",
 "blueprintlabdesign_button", "recexplo_button", "nonwavedefense2_button", "dana_button", "factorio_tweaks_button", "remoteswitch_button", "tsmoutpostbuilder_button", "credotimelapse_button", "spidersentinel_button",
-"citiesofearth_button", "enemyracemanager_button", "oarcmod_button", "decu_button", "leaderboard_button", "abd_on_button", "abd_off_button",
+"citiesofearth_button", "enemyracemanager_button", "oarcmod_button", "decu_button", "leaderboard_button", "abd_on_button", "abd_off_button", "avatars_button",
 }
 
 for _, i in pairs(sprites) do
